--- a/bonnie-notes.Rmd
+++ b/bonnie-notes.Rmd
@@ -40,8 +40,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 #### Episode 3. Creating a Repository
 - mostly good, like the keypoints at the end
-- making a subdirectory - this has me curious how to force commit these, while ignoring contents
-
+- making a subdirectory, 
+- .gitgnore and .gitkeep
+- they don't mention .gitkeep
 
 #### Episode 4. Tracking Changes
 
