--- a/slides/02-working-local/02-working-local.qmd
+++ b/slides/02-working-local/02-working-local.qmd
@@ -1,6 +1,10 @@
 ---
 title: "Working Locally with Git"
-format: revealjs
+format: 
+  revealjs:
+    theme: serif
+    code-copy: true
+    slide-number: true
 editor: visual
 ---
 
