--- a/slides/03-remote-hosting/03-remote-hosting.qmd
+++ b/slides/03-remote-hosting/03-remote-hosting.qmd
@@ -1,6 +1,10 @@
 ---
 title: "Remote Code Hosting and GitHub"
-format: revealjs
+format: 
+  revealjs:
+    theme: serif
+    code-copy: true
+    slide-number: true
 editor: visual
 ---
 
