--- a/slides/01-what-is-vc/01-what-is-vc.qmd
+++ b/slides/01-what-is-vc/01-what-is-vc.qmd
@@ -1,11 +1,22 @@
 ---
 title: "What is Version Control"
-format: revealjs
+format: 
+  revealjs:
+    theme: serif
+    code-copy: true
+    slide-number: true
 editor: visual
 ---
 
-## Slide 1
+## here's some code to copy
+
+```{r}
+#| echo: true
+#| code-copy: true
+rnorm(10)
+```
 
 ## Slide 2
+
 
 ## Slide 3
