--- a/pre-workshop/00-software-install.Rmd
+++ b/pre-workshop/00-software-install.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Installion Instructions and Set-Up"
-author: "Bonnie Robert"
-date: "2023-10-23"
 output: html_document
 ---
 
@@ -10,10 +8,10 @@ output: html_document
 
 ### 1. Create your GitHub Account
 
-As part of this workshop we will be connecting and pushing some sample code to GitHub.  You'll need a GitHub account for this.   In general, creating a GitHub account can be a great way to collaborate on open-source projects, showcase your work, and learn from others. 
+As part of this workshop we will be connecting and pushing some sample code to GitHub, therefore you'll need to create a GitHub account.   In general, creating a GitHub account can be a great way to collaborate on open-source projects, showcase your work, and learn from others. 
 
-1. Go to https://github.com and follow the “Sign up” link at the top-right of the window.
-2. Follow the instructions to create an account.
+1. Go to https://github.com and click “Sign up” at the top-right of the window.
+2. Follow the step-by-step instructions to create an account.
 3. Verify your email address with GitHub.
 
 Optional reading:
@@ -21,44 +19,53 @@ Optional reading:
 
 ### 2. Login to your GitHub Account
 
-When we sign in to Github, we are signing into our application account created in step 1.  This is where we manage our profile settings, set our passwords, and browse repositories.  It is possible to edit repository content from GitHub although more typically, editing is done on our local computers.  We will go into more detail on that in the course workshop. 
+When we sign in to GitHub on the web, we are signing into our application account created in step 1.  This is where we manage our profile settings, set our passwords, and browse repositories.  It is possible to edit repository content from GitHub although editing is typically performed in a local application such as RStudio, VS Code or a text editor.  We will go into more detail on that in the course workshop. 
 
 1. Go to https://github.com/ and click “Sign In” (top right corner).  
-2. Enter either your username or your email address, and password.
+2. Enter either your username or your email address, and password created in Step 1.
 
 
 ### 3. Configure Multi-Factor authentication (2FA)
 
-In 2023, GitHub introduced a requirement for all accounts to have multi-factor authentication (2FA) configured for extra security.  Several options exist for setting up 2FA, the simplest is via text message described below. 
+As of 2023 all GitHub accounts are required to have multi-factor authentication (2FA) configured for extra security.  Several options exist for setting up 2FA, the simplest is via text message described below. 
 
-1. In the upper-right corner of any page, click your profile photo, then click Settings.
-2. In the "Access" section of the sidebar, click  Password and authentication.
-3. In the "Two-factor authentication" section of the page, click Enable two-factor authentication.
+1. In the upper-right corner of any page, click on your profile photo and select Settings.
+2. In the "Access" section of the sidebar, click on Password and authentication.
+3. Scroll down to "Two-factor authentication" section of the page and click Enable two-factor authentication.
 4. At the bottom of the page, next to "SMS authentication", click Select.
 5. Complete the CAPTCHA challenge, which helps protect against spam and abuse.
 6. Under "Setup SMS authentication", select your country code and type your mobile phone number, including the area code. When your information is correct, click Send authentication code.
 7. You'll receive a text message with a security code. On GitHub, type the code into the field under "Verify the code sent to your phone" and click Continue.
 8. If you need to edit the phone number you entered, you'll need to complete another CAPTCHA challenge.
 9. Under "Save your recovery codes", click Download to download your two-factor recovery codes to your device. Save them to a secure location because your recovery codes can help you get back into your account if you lose access.
-10. After saving your two-factor recovery codes, click I have saved my recovery codes to enable two-factor authentication for your account.
+10. After saving your two-factor recovery codes, click "I have saved my recovery codes" to enable two-factor authentication for your account.
 
 Optional reading:
 [Other 2FA configurations](https://docs.github.com/en/authentication/securing-your-account-with-two-factor-authentication-2fa/configuring-two-factor-authentication).
 
-### 4. Authenticate to GitHub
+### 4. Create a Personal Access Token
 
-To keep your account secure, you must authenticate before you can access certain resources on GitHub. Each way of accessing GitHub supports different modes of authentication.  When we access resources via a browser (as in Step 2) we are authenticating with our username and password and two-factor authentication.  In the workshop we will also be accessing GitHub via the REST API.  You can authenticate with the API in different ways, but the simplest way is with a Classic Personal Access Token (PAT). 
+To keep your account secure, you must authenticate before you can access certain resources on GitHub. When we access resources via a browser (as in Step 2) we are authenticating with our username and password and two-factor authentication.  In the workshop we will also be accessing GitHub resources via the REST API.  You can authenticate with the API in different ways, but the simplest way is with a Classic Personal Access Token (PAT). 
 
-1. Verify your email address, if it hasn't been verified yet.
-2. In the upper-right corner of any page, click your profile photo, then click Settings.
-3. In the left sidebar, click  Developer settings.
-4. In the left sidebar, under  Personal access tokens, click Tokens (classic).
-5. Select Generate new token, then click Generate new token (classic).
-6. In the "Note" field, give your token a descriptive name.
-7. To give your token an expiration, select Expiration, then choose a default option or click Custom to enter a date.
-8. Select the scopes you'd like to grant this token. To use your token to access repositories from the command line, select repo. 
-9. Click Generate token.
-10. **Copy the new token to your clipboard and save to a text file for later.**
+
+First verify your email address (if it hasn't been verified yet):
+
+1. In the upper-right corner of any page, click your profile photo, then click Settings.
+2. In the "Access" section of the sidebar, click  Emails.
+3. Under your email address, click Resend verification email.
+4. GitHub will send you an email with a link in it. After you click that link, you'll be taken to your GitHub dashboard and see a confirmation banner.
+
+Then create your PAT:
+
+1. In the upper-right corner of any page, click your profile photo, then click Settings.
+2. In the left sidebar, click  Developer settings.
+3. In the left sidebar, under  Personal access tokens, click Tokens (classic).
+4. Select Generate new token, then click Generate new token (classic).
+5. In the "Note" field, give your token a descriptive name.
+6. To give your token an expiration date, select Expiration.  You have several options, choose what is best for you. 
+7. Select the scopes you'd like to grant this token. The repo and user boxes should be sufficient for the workshop and most cases in general.
+8. Click Generate token.
+9. **Copy the new token to your clipboard and save to a text file for later.**
 
 Optional reading:
 [Authenticating to the REST API](https://docs.github.com/en/rest/overview/authenticating-to-the-rest-api?apiVersion=2022-11-28)
