--- a/pre-workshop/assignment.qmd
+++ b/pre-workshop/assignment.qmd
@@ -2,7 +2,7 @@
 title: "Pre-Workshop Assignment"
 ---
 
-## Pre-workshop Assignement
+## Pre-workshop Assignment
 
 To make the most of our time together on the day of the workshop, we would like you to show up ready-to-go with the proper software installed and configured correctly on your local machine. After working through the installation instructions, please the following in a single Word or PDF document and email it to bonnie.robert\@gov.bc.ca.
 
