--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -2,4 +2,178 @@
 title: "2. Working Locally with Git"
 ---
 
-## 
+## 2.1 **Creating a Repository**
+
+First, let's create a new directory in the `Desktop` folder for our work and then change the current working directory to the newly created one:
+
+```         
+$ cd ~/Desktop
+$ mkdir planets
+$ cd planets
+```
+
+Then we tell Git to make `planets` a [repository](https://swcarpentry.github.io/git-novice/reference.html#repository) \-- a place where Git can store versions of our files:
+
+```         
+$ git init
+```
+
+It is important to note that `git init` will create a repository that can include subdirectories and their files---there is no need to create separate repositories nested within the `planets` repository, whether subdirectories are present from the beginning or added later. Also, note that the creation of the `planets` directory and its initialization as a repository are completely separate processes.
+
+If we use `ls` to show the directory's contents, it appears that nothing has changed:
+
+```         
+$ ls
+```
+
+But if we add the `-a` flag to show everything, we can see that Git has created a hidden directory within `planets` called `.git`:
+
+```         
+$ ls -a
+```
+
+We get the follwoing output:
+
+```         
+.   ..  .git
+```
+
+Git uses this special subdirectory to store all the information about the project, including the tracked files and sub-directories located within the project's directory. If we ever delete the `.git`subdirectory, we will lose the project's history.
+
+Next, we will change the default branch to be called `main`. This might be the default branch depending on your settings and version of git. See the [setup episode](https://swcarpentry.github.io/git-novice/02-setup.html#default-git-branch-naming) for more information on this change.
+
+```         
+$ git checkout -b main
+```
+
+We get the following output:
+
+```         
+Switched to a new branch 'main'
+```
+
+We can check that everything is set up correctly by asking Git to tell us the status of our project:
+
+```         
+$ git status
+```
+
+We get the follwoing output:
+
+```         
+On branch main
+
+No commits yet
+
+nothing to commit (create/copy files and use "git add" to track)
+```
+
+If you are using a different version of `git`, the exact wording of the output might be slightly different.
+
+## 2.2 Tracking Changes
+
+First let's make sure we're still in the right directory. You should be in the `planets` directory.
+
+```         
+$ cd ~/Desktop/planets
+```
+
+Let's create a file called `mars.txt` that contains some notes about the Red Planet's suitability as a base. Open a new document named `mars.txt` using a plain text editor such as Notepad++. Type the text below:
+
+```         
+Cold and dry, but everything is my favorite color
+```
+
+After switching back to the GitBash command-line interface, let's verify that the file was properly created by running the list command (`ls`):
+
+```         
+$ ls
+```
+
+We should see the following file in our directory:
+
+```         
+mars.txt
+```
+
+`mars.txt` contains a single line, which we can verify by running:
+
+```         
+$ cat mars.txt
+```
+
+```         
+Cold and dry, but everything is my favorite color
+```
+
+If we check the status of our project again, Git tells us that it's noticed the new file:
+
+```         
+$ git status
+```
+
+```         
+On branch main
+
+No commits yet
+
+Untracked files:
+   (use "git add <file>..." to include in what will be committed)
+
+    mars.txt
+
+nothing added to commit but untracked files present (use "git add" to track)
+```
+
+The "untracked files" message means that there's a file in the directory that Git isn't keeping track of. We can tell Git to track a file using `git add`:
+
+```         
+$ git add mars.txt
+```
+
+and then check that the right thing happened:
+
+```         
+$ git status
+```
+
+```         
+On branch main
+
+No commits yet
+
+Changes to be committed:
+  (use "git rm --cached <file>..." to unstage)
+
+    new file:   mars.txt
+```
+
+Git now knows that it's supposed to keep track of `mars.txt`, but it hasn't recorded these changes as a commit yet. To get it to do that, we need to run one more command:
+
+```         
+$ git commit -m "Start notes on Mars as a base"
+```
+
+```         
+[main (root-commit) f22b25e] Start notes on Mars as a base
+ 1 file changed, 1 insertion(+)
+ create mode 100644 mars.txt
+```
+
+When we run `git commit`, Git takes everything we have told it to save by using `git add` and stores a copy permanently inside the special `.git` directory. This permanent copy is called a [commit](https://swcarpentry.github.io/git-novice/reference.html#commit) (or [revision](https://swcarpentry.github.io/git-novice/reference.html#revision)) and its short identifier is `f22b25e`. Your commit may have another identifier.
+
+We use the `-m` flag (for "message") to record a short, descriptive, and specific comment that will help us remember later on what we did and why.
+
+::: callout-note
+## callout note
+
+If we just run `git commit` without the `-m` option, Git will launch `nano` (or whatever other editor we configured as `core.editor`) so that we can write a longer message.
+:::
+
+::: callout-note
+## callout note
+
+[Good commit messages](https://chris.beams.io/posts/git-commit/) start with a brief (\<50 characters) statement about the changes made in the commit. Generally, the message should complete the sentence "If applied, this commit will" . If you want to go into more detail, add a blank line between the summary line and your additional notes. Use this additional space to explain why you made changes and/or what their impact will be.
+:::
+
+If we run `git status` now:
