--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -177,3 +177,74 @@ If we just run `git commit` without the `-m` option, Git will launch `nano`
 :::
 
 If we run `git status` now:
+
+```         
+$ git status
+```
+
+```         
+On branch main
+nothing to commit, working tree clean
+```
+
+it tells us everything is up to date. If we want to know what we\'ve done recently, we can ask Git to show us the project\'s history using `git log`:
+
+```         
+$ git log
+```
+
+```         
+commit f22b25e3233b4645dabd0d81e651fe074bd8e73b
+Author: Vlad Dracula <vlad@tran.sylvan.ia>
+Date:   Thu Aug 22 09:51:46 2013 -0400
+
+    Start notes on Mars as a base
+```
+
+`git log` lists all commits made to a repository in reverse chronological order. The listing for each commit includes the commit\'s full identifier (which starts with the same characters as the short identifier printed by the `git commit` command earlier), the commit\'s author, when it was created, and the log message Git was given when the commit was created.
+
+let's add more information to the file. (Again, open up your text editor to add and save your changes. Switch back to command line when you're finished.
+
+```         
+$ cat mars.txt
+```
+
+```         
+Cold and dry, but everything is my favorite color
+The two moons may be a problem for Wolfman
+```
+
+When we run `git status` now, it tells us that a file it already knows about has been modified:
+
+```         
+$ git status
+```
+
+```         
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+	modified:   mars.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
+```
+
+The last line is the key phrase: \"no changes added to commit\". We have changed this file, but we haven\'t told Git we will want to save those changes (which we do with `git add`) nor have we saved them (which we do with `git commit`).
+
+After reviewing our change, it\'s time to commit it:
+
+```         
+$ git add mars.txt
+$ git commit -m "Add concerns about effects of Mars' moons on Wolfman"
+```
+
+```         
+[main 34961b1] Add concerns about effects of Mars' moons on Wolfman
+ 1 file changed, 1 insertion(+)
+```
+
+Git insists that we add files to the set we want to commit before actually committing anything. This allows us to commit our changes in stages and capture changes in logical portions rather than only large batches. For example, suppose we\'re adding a few citations to relevant research to our thesis. We might want to commit those additions, and the corresponding bibliography entries, but *not*commit some of our work drafting the conclusion (which we haven\'t finished yet).
+
+To allow for this, Git has a special *staging area* where it keeps track of things that have been added to the current [changeset](https://swcarpentry.github.io/git-novice/reference.html#changeset) but not yet committed.
