--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -27,22 +27,18 @@ It is important to note that `git init` will create a repository that can incl
 If we use `ls` to show the directory's contents, it appears that nothing has changed:
 
 ```{bash}
-#| code-copy: true
 $ ls
 ```
 
 But if we add the `-a` flag to show everything, we can see that Git has created a hidden directory within `planets` called `.git`:
 
 ```{bash}
-#| code-copy: true
 $ ls -a
 ```
 
 We get the following output:
 
 ```{bash}
-#| code-block-border-left: "#31BAE9"
-#| code-copy: false
 .   ..  .git
 ```
 
@@ -51,28 +47,24 @@ Git uses this special subdirectory to store all the information about the projec
 Next, we will change the default branch to be called `main`. This might be the default branch depending on your settings and version of git. See the [setup episode](https://swcarpentry.github.io/git-novice/02-setup.html#default-git-branch-naming) for more information on this change.
 
 ```{bash}
-#| code-copy: true
 $ git checkout -b main
 ```
 
 We get the following output:
 
 ```{bash}
-#| code-copy: false
 Switched to a new branch 'main'
 ```
 
 We can check that everything is set up correctly by asking Git to tell us the status of our project:
 
 ```{bash}
-#| code-copy: true
 $ git status
 ```
 
 We get the following output:
 
 ```{bash}
-#| code-copy: false
 On branch main
 
 No commits yet
@@ -82,49 +74,49 @@ nothing to commit (create/copy files and use "git add" to track)
 
 If you are using a different version of `git`, the exact wording of the output might be slightly different.
 
-## 2.2 Tracking Changes
+## 2.2 Tracking Files
 
 First let's make sure we're still in the right directory. You should be in the `planets` directory.
 
-```         
+```{bash}         
 $ cd ~/Desktop/planets
 ```
 
 Let's create a file called `mars.txt` that contains some notes about the Red Planet's suitability as a base. Open a new document named `mars.txt` using a plain text editor such as Notepad++. Type the text below:
 
-```         
+```{bash}         
 Cold and dry, but everything is my favorite color
 ```
 
 After switching back to the GitBash command-line interface, let's verify that the file was properly created by running the list command (`ls`):
 
-```         
+```{bash}         
 $ ls
 ```
 
 We should see the following file in our directory:
 
-```         
+```{bash}         
 mars.txt
 ```
 
 `mars.txt` contains a single line, which we can verify by running:
 
-```         
+```{bash}         
 $ cat mars.txt
 ```
 
-```         
+```{bash}         
 Cold and dry, but everything is my favorite color
 ```
 
 If we check the status of our project again, Git tells us that it's noticed the new file:
 
-```         
+```{bash}         
 $ git status
 ```
 
-```         
+```{bash}         
 On branch main
 
 No commits yet
@@ -139,17 +131,17 @@ nothing added to commit but untracked files present (use "git add" to track)
 
 The "untracked files" message means that there's a file in the directory that Git isn't keeping track of. We can tell Git to track a file using `git add`:
 
-```         
+```{bash}         
 $ git add mars.txt
 ```
 
 and then check that the right thing happened:
 
-```         
+```{bash}         
 $ git status
 ```
 
-```         
+```{bash}         
 On branch main
 
 No commits yet
@@ -160,13 +152,16 @@ Changes to be committed:
     new file:   mars.txt
 ```
 
+
+## 2.3 Committing Changes
+
 Git now knows that it's supposed to keep track of `mars.txt`, but it hasn't recorded these changes as a commit yet. To get it to do that, we need to run one more command:
 
-```         
+```{bash}         
 $ git commit -m "Start notes on Mars as a base"
 ```
 
-```         
+```{bash}         
 [main (root-commit) f22b25e] Start notes on Mars as a base
  1 file changed, 1 insertion(+)
  create mode 100644 mars.txt
@@ -177,14 +172,10 @@ When we run `git commit`, Git takes everything we have told it to save by using
 We use the `-m` flag (for "message") to record a short, descriptive, and specific comment that will help us remember later on what we did and why.
 
 ::: callout-note
-## callout note
-
-If we just run `git commit` without the `-m` option, Git will launch `nano` (or whatever other editor we configured as `core.editor`) so that we can write a longer message.
+If we just run `git commit` without the `-m` option, Git will launch a utility program called `nano`  and ask us to write a longer message. If this happens, click `CTRL+X` to go back to the command line and run `git commit -m "your commit message"`.
 :::
 
 ::: callout-note
-## callout note
-
 [Good commit messages](https://chris.beams.io/posts/git-commit/) start with a brief (\<50 characters) statement about the changes made in the commit. Generally, the message should complete the sentence "If applied, this commit will" . If you want to go into more detail, add a blank line between the summary line and your additional notes. Use this additional space to explain why you made changes and/or what their impact will be.
 :::
 
@@ -199,7 +190,10 @@ On branch main
 nothing to commit, working tree clean
 ```
 
-it tells us everything is up to date. If we want to know what we've done recently, we can ask Git to show us the project's history using `git log`:
+it tells us everything is up to date. 
+
+## Our Commit History
+If we want to know what we've done recently, we can ask Git to show us the project's history using `git log`:
 
 ```         
 $ git log
@@ -259,4 +253,9 @@ $ git commit -m "Add concerns about effects of Mars' moons on Wolfman"
 
 Git insists that we add files to the set we want to commit before actually committing anything. This allows us to commit our changes in stages and capture changes in logical portions rather than only large batches. For example, suppose we're adding a few citations to relevant research to our thesis. We might want to commit those additions, and the corresponding bibliography entries, but *not*commit some of our work drafting the conclusion (which we haven't finished yet).
 
+## Staging Area
 To allow for this, Git has a special *staging area* where it keeps track of things that have been added to the current [changeset](https://swcarpentry.github.io/git-novice/reference.html#changeset) but not yet committed.
+
+If you think of Git as taking snapshots of changes over the life of a project, git add specifies what will go in a snapshot (putting things in the staging area), and git commit then actually takes the snapshot, and makes a permanent record of it (as a commit). If you don’t have anything staged when you type git commit, Git will prompt you to use git commit -a or git commit --all, which is kind of like gathering everyone to take a group photo! However, it’s almost always better to explicitly add things to the staging area, because you might commit changes you forgot you made. (Going back to the group photo simile, you might get an extra with incomplete makeup walking on the stage for the picture because you used -a!) Try to stage things manually, or you might find yourself searching for “git undo commit” more than you would like!
+
+!()[https://github.com/bcgov/ds-intro-to-git/blob/main/png/tracking-changes.png]
