--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -74,7 +74,7 @@ nothing to commit (create/copy files and use "git add" to track)
 
 If you are using a different version of `git`, the exact wording of the output might be slightly different.
 
-## 2.2 Tracking Files
+## 2.2 **Tracking Files**
 
 First let's make sure we're still in the right directory. You should be in the `planets` directory.
 
@@ -152,7 +152,7 @@ Changes to be committed:
     new file:   mars.txt
 ```
 
-## 2.3 Committing Changes
+## 2.3 **Committing Changes**
 
 Git now knows that it's supposed to keep track of `mars.txt`, but it hasn't recorded these changes as a commit yet. To get it to do that, we need to run one more command:
 
@@ -191,7 +191,7 @@ nothing to commit, working tree clean
 
 it tells us everything is up to date.
 
-## Our Commit History
+## 2.4 **Viewing the Commit History**
 
 If we want to know what we've done recently, we can ask Git to show us the project's history using `git log`:
 
@@ -253,10 +253,10 @@ $ git commit -m "Add concerns about effects of Mars' moons on Wolfman"
 
 Git insists that we add files to the set we want to commit before actually committing anything. This allows us to commit our changes in stages and capture changes in logical portions rather than only large batches. For example, suppose we're adding a few citations to relevant research to our thesis. We might want to commit those additions, and the corresponding bibliography entries, but *not*commit some of our work drafting the conclusion (which we haven't finished yet).
 
-## Staging Area
+## 2.5 **The Staging Area**
 
 To allow for this, Git has a special *staging area* where it keeps track of things that have been added to the current [changeset](https://swcarpentry.github.io/git-novice/reference.html#changeset) but not yet committed.
 
 If you think of Git as taking snapshots of changes over the life of a project, git add specifies what will go in a snapshot (putting things in the staging area), and git commit then actually takes the snapshot, and makes a permanent record of it (as a commit). If you don't have anything staged when you type git commit, Git will prompt you to use git commit -a or git commit --all, which is kind of like gathering everyone to take a group photo! However, it's almost always better to explicitly add things to the staging area, because you might commit changes you forgot you made. (Going back to the group photo simile, you might get an extra with incomplete makeup walking on the stage for the picture because you used -a!) Try to stage things manually, or you might find yourself searching for "git undo commit" more than you would like!
 
-![The Git Staging Area](./figures/tracking-changes.png)
+![The Git Staging Area](../figures/tracking-changes.png)
